--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,95 +1,129 @@
-#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+.login {
+  margin: 0 5%;
+}
+.login .logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.login logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.login logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  
-  .logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
+  to {
+    transform: rotate(360deg);
   }
-  .logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
   }
-  .logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.login .card {
+  padding: 2em;
+}
+
+.login .read-the-docs {
+  color: #888;
+}
+
+.login .main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  background-color: #7b7b7b;
+  color: black;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin: none;
+  padding: 2 rem;
+  padding-top: 0.5rem;
+  padding-bottom: 2rem;
+  border-radius: 1rem;
+  font-size: large;
+  box-shadow: 0rem 0rem 2rem 0.2rem;
+}
+
+.login .main-content span {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  align-self: center;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 1rem;
+}
+
+.login .main-form {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+}
+
+.login .input-box {
+  border: 0.2em solid #e91e63;
+  padding: 0.8em 0.9em;
+  border-radius: 2em;
+  color: #e91e63;
+  width: 50%;
+  color: black;
+}
+
+.login .submit-btn {
+  align-self: center;
+  font-weight: bolder;
+  color: black;
+  border-radius: 1em;
+  font-size: large;
+  padding: 1rem 4rem 1rem 4rem;
+  margin-top: 1rem;
+  cursor: pointer;
+  border: 0.2em solid #e91e63;
+  transition: 1s;
+  &:hover,
+  &:focus,
+  &:active {
+    background: #e91e63;
+    color: #fff;
   }
-  
-  @keyframes logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+}
+
+@media screen and (max-width: 600px) {
+  .login {
+    margin: none;
   }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-      animation: logo-spin infinite 20s linear;
-    }
+  .login .main-content span {
+    width: 100%;
+    justify-content: left;
+    gap: 1rem;
   }
-  
-  .card {
-    padding: 2em;
+  .login .submit-btn {
+    padding: 1rem 2rem 1rem 2rem;
   }
-  
-  .read-the-docs {
-    color: #888;
+}
+@media screen and (max-width: 400px) {
+  .login .input-box {
+    overflow: hidden;
+    width: 60%;
   }
-  
-  .main-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 130%;
-    background-color: rgb(134, 189, 255);
-    color: black;
-    padding: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 2rem;
-    border-radius: 1rem;
-    font-size: large;
-    box-shadow:0rem 0rem 2rem 0.2rem;
+  .login {
+    overflow: hidden;
   }
-  
-  .main-content span{
-    display: flex;
-    flex-direction: row;
-    width:  80%;
-    align-self: center;
-    justify-content: space-between;
-    padding-bottom: 1rem;
-  }
-  
-  .main-form{
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-  }
-  
-  
-  
-  
-  .input-box{
-    background-color: rgb(255, 255, 255);
-    width: 50%;
-    color: black;
-  }
-  
-  .submit-btn{
-    align-self: center;
-  }
-  
-  
-  .date{
-      text-align: center;
-    color: grey;
-  
-  }
-  
-  
+}
+
+.login .date {
+  text-align: center;
+  color: grey;
+}
