--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,5 +1,6 @@
 .login {
   margin: 0 5%;
+  background-color: #f5f5f5;
 }
 .login .logo {
   height: 6em;
@@ -43,7 +44,7 @@
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  background-color: #7b7b7b;
+  background-color: white;
   color: black;
   margin-top: 5%;
   margin-bottom: 5%;
@@ -70,6 +71,10 @@
   display: flex;
   flex-direction: column;
   width: 90%;
+}
+
+.login .input-label {
+  max-width: 3rem;
 }
 
 .login .input-box {
@@ -107,12 +112,13 @@
   .login .main-content span {
     width: 100%;
     justify-content: left;
-    gap: 1rem;
+    gap: 5rem;
   }
   .login .submit-btn {
     padding: 1rem 2rem 1rem 2rem;
   }
 }
+
 @media screen and (max-width: 400px) {
   .login .input-box {
     overflow: hidden;
@@ -126,4 +132,9 @@
 .login .date {
   text-align: center;
   color: grey;
+}
+
+.login .button_div{
+  display: flex;
+  justify-content: center;
 }
