--- a/src/quizes/quiz-form.css
+++ b/src/quizes/quiz-form.css
@@ -21,7 +21,7 @@
     margin-bottom: 10px;
   }
   
-  button {
+  .quiz-container button {
     background-color: #3498db;
     color: white;
     border: none;
