--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -242,3 +242,22 @@
   margin-top: 20px;
   width: 80%;
 }
+@media screen and (max-width: 450px) {
+  .ag-courses_box {
+    grid-template-columns: repeat(1, 1fr);
+    padding: none;
+  }
+  .ag-courses-item_title {
+    font-size: 20px;
+    display: inline-block;
+    visibility: inherit;
+    align-self: left;
+    padding: none;
+    margin: none;
+  }
+  .ag-courses_item{
+    border: 1px solid black;
+
+  }
+  
+}
